@@ -1,0 +1,23 @@
+{
+  "@timestamp": "2016-05-23T08:05:34.853Z",
+  "@metadata": {
+    "beat": "noindex",
+    "type": "doc"
+  },
+  "system": {
+    "uptime": {
+      "duration": {
+        "ms": 695499821
+      }
+    }
+  },
+  "metricset": {
+    "module": "system",
+    "name": "uptime",
+    "rtt": 115
+  },
+  "beat": {
+    "name": "host.example.com",
+    "hostname": "host.example.com"
+  }
+}
