@@ -1,0 +1,2 @@
+// Package uptime reports the system's uptime.
+package uptime
